tests/rosetta/out/Java/best-shuffle.error
javac error: exit status 1
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:9: error: cannot find symbol
    static List<any> shuffleChars(String s, int seed) {
                ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:34: error: cannot find symbol
    static List<any> bestShuffle(String s, int seed) {
                ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:21: error: incompatible types: String cannot be converted to List<String>
            List<String> tmp = chars.get(idx);
                                        ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:23: error: incompatible types: List<String> cannot be converted to String
            chars.set(j, tmp);
                         ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:29: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)chars.get(i)).doubleValue();
                                          ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:35: error: cannot find symbol
        List<any> r = shuffleChars(s, seed);
             ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:36: error: cannot find symbol
        List<any> t = r.get(0);
             ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:37: error: cannot find symbol
        List<any> sd = r.get(1);
             ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:49: error: incompatible types: String cannot be converted to List<String>
                    List<String> tmp = arr.get(i);
                                              ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:51: error: incompatible types: List<String> cannot be converted to String
                    arr.set(j, tmp);
                               ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:69: error: incompatible types: String cannot be converted to Number
            out = out + ((Number)arr.get(i)).doubleValue();
                                        ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:79: error: cannot find symbol
            List<any> r = bestShuffle(ts.get(i), seed);
                 ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:80: error: cannot find symbol
            List<any> shuf = r.get(0);
                 ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:82: error: cannot find symbol
            List<any> cnt = r.get(2);
                 ^
  symbol:   class any
  location: class BestShuffle
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:83: error: incompatible types: String cannot be converted to Number
            System.out.println(((Number)((Number)((Number)((Number)((Number)ts.get(i)).doubleValue() + " -> ").doubleValue() + shuf).doubleValue() + " (").doubleValue() + String.valueOf(cnt)).doubleValue() + ")");
                                                                                  ^
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:83: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)((Number)ts.get(i)).doubleValue() + " -> ").doubleValue() + shuf).doubleValue() + " (").doubleValue() + String.valueOf(cnt)).doubleValue() + ")");
                                                                                                              ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavabest-shuffle11505395/001/BestShuffle.java:83: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)((Number)ts.get(i)).doubleValue() + " -> ").doubleValue() + shuf).doubleValue() + " (").doubleValue() + String.valueOf(cnt)).doubleValue() + ")");
                                                                                                                                                          ^
  symbol:   method doubleValue()
  location: class String
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
17 errors
